Closed Bug 1735458 Opened 4 years ago Closed 4 years ago

New mail alert should not be displayed when running a full-screen application

Categories

(Thunderbird :: OS Integration, defect)

Thunderbird 91
defect

Tracking

(thunderbird_esr91+ fixed, thunderbird94+ fixed)

RESOLVED FIXED
95 Branch
Tracking Status
thunderbird_esr91 + fixed
thunderbird94 + fixed

People

(Reporter: the.assimilator, Assigned: rnons)

References

(Regression)

Details

(Keywords: regression)

Attachments

(1 file)

User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:78.0) Gecko/20100101 Firefox/78.0 Waterfox/78.13.0

Steps to reproduce:

It appears that with the recent, wholly unnecessary UI redesign, bug #499557 has resurfaced.

Actual results:

See #499557.

Expected results:

See #499557.

Assignee: nobody → remotenonsense
Status: UNCONFIRMED → ASSIGNED
Ever confirmed: true
Keywords: regression
Regressed by: 715799
Blocks: tb91found
Target Milestone: --- → 95 Branch

Pushed by mkmelin@iki.fi:
https://hg.mozilla.org/comm-central/rev/a3215bf459e2
Do not show mail notification on Windows if running fullscreen app. r=mkmelin

Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED

Windows bct5 seem to be perma failing: comm/mail/test/browser/notification/browser_notification.js I'd think due to this?
Started try with backout now: https://treeherder.mozilla.org/#/jobs?repo=try-comm-central&revision=daa7f16e92e5d7ac8ae85a32c4bb0b2d088251ce

Status: RESOLVED → REOPENED
Resolution: FIXED → ---

Pushed by mkmelin@iki.fi:
https://hg.mozilla.org/comm-central/rev/3a1a2fe632c7
Do not show mail notification on Windows if running fullscreen app. r=mkmelin

Status: REOPENED → RESOLVED
Closed: 4 years ago4 years ago
Resolution: --- → FIXED

Comment on attachment 9245835 [details]
Bug 1735458 - Do not show mail notification on Windows if running fullscreen app. r=mkmelin

[Approval Request Comment]
Regression caused by (bug #): bug 715799
User impact if declined: Mail notification on Windows is shown even when running fullscreen app
Testing completed (on c-c, etc.): c-c
Risk to taking this patch (and alternatives if risky): low

Attachment #9245835 - Flags: approval-comm-esr91?
Attachment #9245835 - Flags: approval-comm-beta?

Comment on attachment 9245835 [details]
Bug 1735458 - Do not show mail notification on Windows if running fullscreen app. r=mkmelin

[Triage Comment]
Approved for beta

Attachment #9245835 - Flags: approval-comm-beta? → approval-comm-beta+

Comment on attachment 9245835 [details]
Bug 1735458 - Do not show mail notification on Windows if running fullscreen app. r=mkmelin

[Triage Comment]
approved for esr91

Attachment #9245835 - Flags: approval-comm-esr91? → approval-comm-esr91+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: