Bug 1735458 - Do not show mail notification on Windows if running fullscreen app. r=mkmelin

Differential Revision: https://phabricator.services.mozilla.com/D128427

--HG--
extra : amend_source : db4b4e7c3baca7329e40eb02ac9918d1961baaf4